--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/aboutme.css" />
     <link rel="stylesheet" href="styles/project.css" />
     <link rel="stylesheet" href="styles/contact.css" />
+    <link rel="stylesheet" href="styles/experiences.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins:400,700"
@@ -142,8 +143,8 @@
               backend work, although I've dabbled in frontend too.
             </p>
             <p>
-              My love for math and science naturally led me to coding,
-              and a career in software seemed like the perfect fit. One of the
+              My love for math and science naturally led me to coding, and a
+              career in software seemed like the perfect fit. One of the
               highlights of my journey was interning at Infosys, where I led a
               team of interns to develop a movie ticketing website. We snagged
               second place for our project, and the experience taught me
@@ -165,7 +166,7 @@
           <div class="carousel">
             <div class="carousel-slide">
               <img
-                src="./resources/images/labconnect_logo.png"
+                src="./resources/images/LabConnect_Logo.png"
                 class="project-image"
                 alt="LabConnect"
               />
@@ -174,16 +175,16 @@
                 <p><strong>Role:</strong> Open Source Backend Developer</p>
                 <p><strong>Duration:</strong> Sep 2023 - Present</p>
                 <p>
-                  <strong>About:</strong> Developing and maintaining a centralized
-                  platform for posting and discovering campus lab and research
-                  opportunities using Python-Flask for backend and JavaScript for
-                  frontend components.
+                  <strong>About:</strong> Developing and maintaining a
+                  centralized platform for posting and discovering campus lab
+                  and research opportunities using Python-Flask for backend and
+                  JavaScript for frontend components.
                 </p>
               </div>
             </div>
             <div class="carousel-slide">
               <img
-                src="./resources/images/semweb_logo.png"
+                src="./resources/images/research_logo.png"
                 class="project-image"
                 alt="Research in Knowledge Representation"
               />
@@ -193,15 +194,15 @@
                 <p><strong>Duration:</strong> Jan 2024 - May 2024</p>
                 <p>
                   <strong>About:</strong> Producing and updating semantic data
-                  dictionaries for NHANES datasets. Exploring techniques for graph
-                  data and proposing an application for variable search over
-                  semantically described datasets.
+                  dictionaries for NHANES datasets. Exploring techniques for
+                  graph data and proposing an application for variable search
+                  over semantically described datasets.
                 </p>
               </div>
             </div>
             <div class="carousel-slide">
               <img
-                src="./resources/images/rpievents_logo.png"
+                src="./resources/images/rpievents.png"
                 class="project-image"
                 alt="RPI Events"
               />
@@ -211,9 +212,9 @@
                 <p><strong>Duration:</strong> Jan 2024 - Apr 2024</p>
                 <p>
                   <strong>About:</strong> Developed a web application that
-                  consolidates all campus events into one platform. Provided a REST
-                  API for event viewing and handled backend development and all API
-                  endpoints.
+                  consolidates all campus events into one platform. Provided a
+                  REST API for event viewing and handled backend development and
+                  all API endpoints.
                 </p>
               </div>
             </div>
@@ -228,10 +229,10 @@
                 <p><strong>Role:</strong> Developer</p>
                 <p><strong>Duration:</strong> Sep 2023 - Dec 2023</p>
                 <p>
-                  <strong>About:</strong> Developed Planet, a task planning website
-                  for students to streamline deadline tracking for various
-                  assignments. Utilized HTML, CSS, JavaScript, PHP, and MySQL to build
-                  the platform.
+                  <strong>About:</strong> Developed Planet, a task planning
+                  website for students to streamline deadline tracking for
+                  various assignments. Utilized HTML, CSS, JavaScript, PHP, and
+                  MySQL to build the platform.
                 </p>
               </div>
             </div>
@@ -246,16 +247,17 @@
                 <p><strong>Role:</strong> Developer</p>
                 <p><strong>Duration:</strong> Nov 2023</p>
                 <p>
-                  <strong>About:</strong> Created a fully working chatbot in 24 hours
-                  capable of transcribing speech to text and responding in a natural
-                  conversational style using Google Cloud and ChatGPT API. Developed
-                  the backend with Flask and connected the chatbot to a database.
+                  <strong>About:</strong> Created a fully working chatbot in 24
+                  hours capable of transcribing speech to text and responding in
+                  a natural conversational style using Google Cloud and ChatGPT
+                  API. Developed the backend with Flask and connected the
+                  chatbot to a database.
                 </p>
               </div>
             </div>
             <div class="carousel-slide">
               <img
-                src="./resources/images/rpicinema_logo.png"
+                src="./resources/images/rpicinema.jpg"
                 class="project-image"
                 alt="RPI Cinema"
               />
@@ -264,9 +266,10 @@
                 <p><strong>Role:</strong> Developer</p>
                 <p><strong>Duration:</strong> Sep 2022 - Dec 2022</p>
                 <p>
-                  <strong>About:</strong> Developed a website for consolidating movie
-                  screening data on campus using HTML, CSS, JavaScript, PHP, and
-                  MySQL. Presented the project to classmates and the professor.
+                  <strong>About:</strong> Developed a website for consolidating
+                  movie screening data on campus using HTML, CSS, JavaScript,
+                  PHP, and MySQL. Presented the project to classmates and the
+                  professor.
                 </p>
               </div>
             </div>
@@ -276,14 +279,68 @@
             <div class="carousel-arrow right-arrow">&#10095;</div>
           </div>
           <div class="carousel-indicators">
-            <!-- Indicators will be generated dynamically -->
+            <!-- Indicators -->
           </div>
         </div>
-      </section>      
+      </section>
 
       <section class="experiences" id="experiences">
         <h2>Experiences</h2>
+        <div class="experience-cards">
+          <div class="experience-card active">
+            <img src="./resources/images/nyiso_logo.jpeg" alt="NYISO Logo" class="experience-logo"/>
+            <div class="experience-details">
+              <h3>Software IT Technologies Intern</h3>
+              <p><strong>NYISO · Internship</strong></p>
+              <p>May 2024 - Present</p>
+              <ul>
+                <li>Penetration Testing: Discovered an XSS vulnerability in a web application and authored a security report about it.</li>
+                <li>API Development: Created two GET API endpoints for an upload/download bidding system using Spring Boot and Java, adhering to Agile methodologies.</li>
+                <li>Data Grid Component: Developed a custom React data grid component.</li>
+                <li>Presented a poster detailing internship activities and engaged in Q&A sessions to explain project outcomes and methodologies.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="experience-card">
+            <img src="./resources/images/rensselaer_polytechnic_institute_logo.jpeg" alt="Help Desk Logo" class="experience-logo"/>
+            <div class="experience-details">
+              <h3>Help Desk Consultant</h3>
+              <p><strong>Voorhees Computing Center · Part-time</strong></p>
+              <p>Sep 2022 - Present</p>
+              <ul>
+                <li>Interacting with students, staff, and faculty by phone, email, or in-person to provide technical support.</li>
+                <li>Diagnosing and resolving software and hardware issues.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="experience-card">
+            <img src="./resources/images/leapscale_logo.jpeg" alt="Leap & Scale Logo" class="experience-logo"/>
+            <div class="experience-details">
+              <h3>Summer Intern</h3>
+              <p><strong>Leap & Scale · Internship</strong></p>
+              <p>May 2019</p>
+              <ul>
+                <li>Worked with a team on the project ideation of IoT-based swim gear with an app component to track health stats.</li>
+                <li>Gained experience in IoT technology and cloud computing.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="experience-card">
+            <img src="./resources/images/infosys_logo.jpeg" alt="Infosys Logo" class="experience-logo"/>
+            <div class="experience-details">
+              <h3>Summer Intern</h3>
+              <p><strong>Infosys · Internship</strong></p>
+              <p>May 2018</p>
+              <ul>
+                <li>Acquired experience in HTML, CSS, JavaScript for web development.</li>
+                <li>Led a team of interns to develop a movie ticketing website, winning a second-place award for the project.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </section>
+      
+      
 
       <section class="skills">
         <h2>Skills</h2>
@@ -315,5 +372,6 @@
     <script src="scripts/project.js"></script>
     <script src="scripts/cursor.js"></script>
     <script src="scripts/nav.js"></script>
+    <script src="scripts/experiences.js"></script>
   </body>
 </html>
