--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins:400,700"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link
       href="https://fonts.googleapis.com/css?family=Inter"
       rel="stylesheet"
@@ -30,16 +31,6 @@
     </script>
   </head>
   <body id="m_body">
-    <!-- <nav id="navbar">
-      <div id="nav-icon" onclick="toggleNav()">☰</div>
-      <div id="nav-menu">
-        <a href="#home">Home</a>
-        <a href="#about_me">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#experiences">Experiences</a>
-        <a href="#contact">Contact</a>
-      </div>
-    </nav> -->
 
     <div class="container" id="app">
       <!-- Home Section -->
@@ -297,7 +288,6 @@
                 <li>Penetration Testing: Discovered an XSS vulnerability in a web application and authored a security report about it.</li>
                 <li>API Development: Created two GET API endpoints for an upload/download bidding system using Spring Boot and Java, adhering to Agile methodologies.</li>
                 <li>Data Grid Component: Developed a custom React data grid component.</li>
-                <li>Presented a poster detailing internship activities and engaged in Q&A sessions to explain project outcomes and methodologies.</li>
               </ul>
             </div>
           </div>
