updated nyiso internship end date

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <div class="experience-details">
               <h3>Software IT Technologies Intern</h3>
               <p><strong>NYISO · Internship</strong></p>
-              <p>May 2024 - Present</p>
+              <p>May 2024 - August 2024</p>
               <ul>
                 <li>
                   Penetration Testing: Discovered an XSS vulnerability in a web
