added minor details

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <section class="home" id="home">
         <div class="home_content">
           <h1 id="name_heading">MRUNAL<br />ATHALEY</h1>
-          <p id="intro">Junior at Rensselaer Polytechnic Institute</p>
+          <p id="intro">Senior at Rensselaer Polytechnic Institute</p>
           <p id="degree">
             Dual B.S. in Computer Science and Information Technology and Web
-            Science
+            Science, minor in Cognitive Science
           </p>
           <div class="socials">
             <ul class="socials_buttons_list">
@@ -76,9 +76,9 @@
           <div class="slide biography">
             <h2>Biography</h2>
             <p>
-              Hi! I'm Mrunal Athaley, a junior at Rensselaer Polytechnic
+              Hi! I'm Mrunal Athaley, a senior at Rensselaer Polytechnic
               Institute, where I'm pursuing a dual B.S. in Computer Science and
-              Information Technology and Web Science. With a GPA of 3.89/4.00,
+              Information Technology and Web Science and a minor in Cognitive Science. With a GPA of 3.89/4.00,
               I've proudly made the Dean's Honor List every semester. My passion
               lies in leveraging data to make a positive impact in healthcare,
               and I'm deeply fascinated by AI and ML. I'm excited to dive into
